--- a/templates/index.html
+++ b/templates/index.html
@@ -18,15 +18,15 @@
         <div class="question-wrapper">
             <nav>
                 <ul>
-                    <li>Математика</li>
-                    <li>Программирование</li>
-                    <li>Физкультура</li>
+                    {% for i in subjects %}
+                    <li><a href="{% url 'conspect:lesson' i.pk %}">{{ i }}</a></li>
+                    {% endfor %}
 
                 </ul>
             </nav>
             <section class="questions" id="question">
                 <h3 class="questions_title">Выбери подходящий для своего конспекта вариант :</h3>
-                {% for subject in subjects %}
+                {% for subject in object.structure_components.all %}
                 <div class="questions_block" id="block_1"><h4 class="title_topic">{{ subject.name }}</h4>
 
                     {% for answer in subject.answers.all %}
